--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
 
-    datasource:
-        url: jdbc:h2:tcp://localhost:9092/test
+#    datasource:
+#        url: jdbc:h2:tcp://localhost:9092/test
 #        url: jdbc:h2:mem:test;MV_STORE=FALSE
 
 #    jpa:
