Add integration tests

--- a/build.gradle
+++ b/build.gradle
@@ -36,9 +36,17 @@ dependencies {
     // end::actuator[]
     // tag::tests[]
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("junit:junit")
     // end::tests[]
 }
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.3'
+}
+
+test {
+    testLogging {
+        // Show that tests are run in the command-line output
+        events 'passed'
+    }
 }
