--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
 
-#    datasource:
+    datasource:
 #        url: jdbc:h2:tcp://localhost:9092/test
 #        url: jdbc:h2:mem:test;MV_STORE=FALSE
 
